-add hover to sotial - hooked up js to modal image preview

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <h2>Showcase your work like a pro.</h2>
     <p>Contact me if you like my work</p>
     <ul class="wraper work-preview">
-      <li class="container">
+      <li >
         <img src="./img/work_1.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#" >
+            <a href="#" class="show-big-prw">
                 <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#" >
@@ -90,7 +90,7 @@
         <img src="./img/work_2.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#">
+            <a href="#" class="show-big-prw">
               <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#">
@@ -103,7 +103,7 @@
         <img src="./img/work_3.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#">
+            <a href="#" class="show-big-prw">
               <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#">
@@ -116,7 +116,7 @@
         <img src="./img/work_4.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#">
+            <a href="#" class="show-big-prw">
               <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#">
@@ -129,7 +129,7 @@
         <img src="./img/work_5.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#">
+            <a href="#" class="show-big-prw">
               <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#">
@@ -142,7 +142,7 @@
         <img src="./img/work_6.png" alt=''/>
         <div class="overlay">
           <div class="preview-action">
-            <a href="#">
+            <a href="#" class="show-big-prw">
               <i class="fas fa-search-plus fa-sm"></i>
             </a>
             <a href="#">
@@ -152,8 +152,8 @@
         </div>
       </li>
     </ul>
-    <div class="modal-pportfolio">
-      <span class="modal-close"><i class="fas fa-window-close fa-2x "></i></span>
+    <div class="modal-pportfolio" id='modal'>
+      <span class="modal-close" id='modal-close'><i class="fas fa-window-close fa-2x "></i></span>
     </div>
   </section>
   
